Bug 184553 - Encoding issue
Summary: Encoding issue
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-Piwigo (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-16 21:33 UTC by soulflyb
Modified: 2023-02-25 08:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description soulflyb 2009-02-16 21:33:04 UTC
Version:           0.2.0-rc2 (using KDE 4.2.0)
OS:                Linux
Installed from:    Mandriva RPMs

Albums containing letters with accent, for example an acute accent, are not correctly displayed.

For example, an "è" appears as "è".

Moreover, creating an album with an accent via galleryexport doesn't work properly.
Comment 1 Nicolas L. 2009-02-17 08:23:01 UTC
i  can't reproduce on latest mandriva packages.
Maybe i do it wrong, can you explain how to reproduce ?
Comment 2 soulflyb 2009-02-17 09:16:55 UTC
I'm simply connecting to my Gallery with the galleryexport plugin.

It is a Gallery 2.3.0 hosted by 1&1.
<i>
html lang="fr-FR"
meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/
</i>

In the plugin, albums with accented letters are accessible but their names are not well displayed. I thought it was just a matter of encoding but apparently I'm wrong ...

Last these albums were created in Gallery2 and not with the plugin, I don't know if it will help you.
Comment 3 Nicolas L. 2009-02-17 09:24:14 UTC
ok i will setup a gallery2 on my PC and try
Comment 4 Andrea Diamantini 2009-02-19 19:36:40 UTC
SVN commit 928655 by adjam:

BUG: 184553

Gallery plugin now displays accents properly!



 M  +5 -10     gallerytalker.cpp  
 M  +1 -1      gallerywindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=928655
Comment 5 soulflyb 2009-02-19 22:16:36 UTC
Great ! Thank You!