BUG: 184553

Gallery plugin now displays accents properly!


svn path=/trunk/extragear/graphics/kipi-plugins/; revision=928655